capture button input and correctly identify checkbox state

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -22,31 +22,31 @@
     <div id="outputDiv">
         <div class="taskDiv">
             <p>This is an example task</p>
-            <input type="checkbox" id="task1checkBox" class="taskCheckBox">
+            <input type="checkbox" class="taskCheckBox">
         </div>
         <div class="taskDiv">
             <p>This is an example task</p>
-            <input type="checkbox" id="task1checkBox" class="taskCheckBox">
+            <input type="checkbox" class="taskCheckBox">
         </div>
         <div class="taskDiv">
             <p>This is an example task</p>
-            <input type="checkbox" id="task1checkBox" class="taskCheckBox">
+            <input type="checkbox" class="taskCheckBox">
         </div>
         <div class="taskDiv">
             <p>This is an example task</p>
-            <input type="checkbox" id="task1checkBox" class="taskCheckBox">
+            <input type="checkbox" class="taskCheckBox">
         </div>
         <div class="taskDiv">
             <p>This is an example task</p>
-            <input type="checkbox" id="task1checkBox" class="taskCheckBox">
+            <input type="checkbox" class="taskCheckBox">
         </div>
         <div class="taskDiv">
             <p>This is an example task</p>
-            <input type="checkbox" id="task1checkBox" class="taskCheckBox">
+            <input type="checkbox" class="taskCheckBox">
         </div>
         <div class="taskDiv">
             <p>This is an example task</p>
-            <input type="checkbox" id="task1checkBox" class="taskCheckBox">
+            <input type="checkbox" class="taskCheckBox">
         </div>
     </div>
 </body>
