added delete button styling and click handler

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -22,32 +22,21 @@
     <div id="outputDiv">
         <div class="taskDiv">
             <p>This is an example task</p>
-            <input type="checkbox" class="taskCheckBox">
+            <button class="deleteButton">X</button></button> <input type="checkbox" class="taskCheckBox">
         </div>
         <div class="taskDiv">
             <p>This is an example task</p>
-            <input type="checkbox" class="taskCheckBox">
+            <button class="deleteButton">X</button></button> <input type="checkbox" class="taskCheckBox">
         </div>
         <div class="taskDiv">
             <p>This is an example task</p>
-            <input type="checkbox" class="taskCheckBox">
+            <button class="deleteButton">X</button></button> <input type="checkbox" class="taskCheckBox">
         </div>
         <div class="taskDiv">
             <p>This is an example task</p>
-            <input type="checkbox" class="taskCheckBox">
+            <button class="deleteButton">X</button></button> <input type="checkbox" class="taskCheckBox">
         </div>
-        <div class="taskDiv">
-            <p>This is an example task</p>
-            <input type="checkbox" class="taskCheckBox">
-        </div>
-        <div class="taskDiv">
-            <p>This is an example task</p>
-            <input type="checkbox" class="taskCheckBox">
-        </div>
-        <div class="taskDiv">
-            <p>This is an example task</p>
-            <input type="checkbox" class="taskCheckBox">
-        </div>
+
     </div>
 </body>
 
