--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <title></title>
+    <title>Full Stack To-Do</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="styles.css" rel="stylesheet">
-    <script src="../vendors/jquery-3.2.1.min.js"></script>
+    <script src="/vendors/jquery-3.2.1.min.js"></script>
     <script src="client.js"></script>
 </head>
 
