much improved comments and documentation. removed example content from page load

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,6 +10,10 @@
     <script src="client.js"></script>
 </head>
 
+<!--
+    In this simple webapp, index.html is our only page. Structured pretty simply, with static headlineDiv and inputDiv then an initially empty outputDiv that will be filled by the script after the DOM is loaded
+-->
+
 <body>
     <div id="headlineDiv">
         <h1>Full Stack To-Do</h1>
@@ -20,6 +24,12 @@
         <button id="submitButton">Submit</button>
     </div>
     <div id="outputDiv">
+        
+        <!-- 
+            These example divs were used for testing, and represent the same structure as the script-created taskDivs which populate the live app
+        -->
+
+        <!--
         <div class="taskDiv">
             <p>This is an example task</p>
             <button class="deleteButton">X</button></button> <input type="checkbox" class="taskCheckBox">
@@ -35,7 +45,7 @@
         <div class="taskDiv">
             <p>This is an example task</p>
             <button class="deleteButton">X</button></button> <input type="checkbox" class="taskCheckBox">
-        </div>
+        </div> -->
 
     </div>
 </body>
